--- a/Readme
+++ b/Readme
@@ -1,4 +1,18 @@
-# ProyectoFinalMartinez — Simulador Ecommerce de Tecnología
-Portal 100% funcional en HTML/CSS/JS con catálogo, filtros, carrito (localStorage) y checkout (validaciones + SweetAlert2).
-- Ejecutar: abrir `index.html` con Live Server (puerto 5500) o `python -m http.server 8000`.
-- Estructura: `index.html`, `styles.css`, `app.js`, `data/`, `assets/`.
+Proyecto Final Martinez — Simulador Ecommerce Gamer 🎮
+
+Este es mi proyecto final del curso de JavaScript, un Ecommerce interactivo que simula la compra de productos gamer (consolas, componentes, periféricos).
+El portal incluye catálogo dinámico, carrito de compras persistente en localStorage y proceso de checkout con validaciones.
+
+🚀 Características
+
+HTML + CSS + JavaScript (vanilla).
+
+DOM + Eventos: renderizado dinámico de productos.
+
+Carrito de compras con almacenamiento en localStorage.
+
+Notificaciones y alertas con SweetAlert2.
+
+Validaciones de formulario en checkout.
+
+Diseño minimalista, con portal gamer y fondo animado.
